[gd_scene load_steps=20 format=4 uid="uid://baqn44ngm0jv1"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_vl8v5"]
[ext_resource type="PackedScene" uid="uid://dayrj5f78ulqv" path="res://models/combat/bow.glb" id="2_4f3jw"]
[ext_resource type="Script" path="res://scripts/combat/bow.gd" id="2_cgjgp"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="3_ohdt4"]
[ext_resource type="Animation" uid="uid://dqa0h82y3qn1t" path="res://addons/godot-xr-tools/hands/animations/left/Grip 1.res" id="4_bdr5j"]
[ext_resource type="Texture2D" uid="uid://raydtcfqir2e" path="res://models/combat/Bow.png" id="4_u0ty5"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="5_pfwtn"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="6_v4ojs"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="7_m761g"]
[ext_resource type="PackedScene" uid="uid://ce7vysyvondf8" path="res://addons/godot-xr-tools/objects/snap_zone.tscn" id="9_phia5"]
[ext_resource type="PackedScene" uid="uid://bddj5m7ull6g0" path="res://addons/godot-xr-tools/interactables/interactable_handle.tscn" id="9_q5fw6"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cxhhj"]
margin = 0.005
points = PackedVector3Array(1.71839, 0.0758977, 7.06256, 1.47202, 0.158037, 6.56896, 1.71839, 0.0758977, -7.06256, -0.170374, 0.240175, -3.20221, -0.170374, -0.252561, 2.62703, 1.22565, -0.170423, -6.32284, -0.170374, 0.240175, 3.20221, 1.71839, -0.0882836, 7.06256, 0.978895, -0.170423, 6.40442, 1.47202, 0.158037, -6.56896, -0.252561, -0.252561, -2.29934, 0.240175, -0.170423, -5.09091, 1.71839, -0.0882836, -7.06256, 0.40455, 0.158037, 5.41998, 0.814714, 0.158037, -6.15831, 0.240175, 0.240175, 3.28379, 0.240175, -0.170423, 5.09091, 0.240175, -0.252561, 2.62703, 1.14327, -0.170423, 6.40442, 0.978895, -0.170423, -6.40442, 0.240175, -0.252561, -2.62703, 0.240175, 0.240175, -3.28379, -0.252561, -0.252561, 2.29934, 1.06127, 0.158037, 6.48738, 0.40455, 0.158037, -5.41998, 1.55401, 0.0758977, -7.06256, 1.55401, -0.0882836, 7.06256, 1.22565, 0.158037, -6.65192, 0.486544, -0.170423, -5.58313, -0.170374, -0.252561, -2.62703, 0.814714, 0.158037, 6.15831, 0.486544, -0.170423, 5.58313)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nwlmf"]
albedo_texture = ExtResource("4_u0ty5")

[sub_resource type="Resource" id="Resource_s3v65"]
script = ExtResource("5_pfwtn")
closed_pose = ExtResource("4_bdr5j")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6vl11"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.25098, 0.164706, 0.0196078, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_3h55a"]
resource_name = "bow_Cube"
_surfaces = [{
"aabb": AABB(-0.211496, -0.211496, -7.02151, 1.89218, 0.422993, 14.043),
"attribute_data": PackedByteArray("cNKUPqUlfT+K2JQ+myBQP4ZElT507HE/Im6UPo9yWz8SIZU+z6JmP+r9/j47aXo/wAf/Pp7cUj/Xuv0+yppwPwFX/j4csVw/z5f9PgqTZj9Rbis/ZBJVPwyRKz/n53c/pcMqP7g1bz/99Co/rrFdPwiXKj8RlWY/GbpTP9RxWT/U6FM/0w1zP88mUz8evGw/tC1TP5jmXz8j7VI/xzhmPwNyaT/KVVw/fo9pPw6tbz8fumc/zRBrP+H1aD/STmE/y4RnP14cZj+oLng/hWdtP4gzeD/UKl4/20t7P2HKZD9AjXU/Jx1qPwPoeD8ET2g/PMd3P4BmYj9fY3U/LOtlP8ClUTyaIFA/QMZVPAkofT9CPHs/8EtKPz9Lez+DRB0/lyU0P/JGHT82KjQ/8EtKP8jwMz/FEj8/AK9VPOnqcT9APHs/zw4/P4DpUjytjVs/k0Z7P5axKD8xWzQ/4JgoPx0CND8iyTM/YN9UPES8Zj8cP3s/LeAzP00c/j7ZBCA/ACn+PmaRRz9ca/8+9MI9P8LN/j5Q2Sk/p43/Pji7Mz/JBKY+wxFFP6VHpj46PCI/8p6nPopfPD/yOqc+gNsqP373pz7hvjM/OKkqPjk5QD+8YCs+Fp0mP26wLT5z5zk/JpMtPt0RLT9Qli4+EmQzP4waqD0l2Tw/6AGpPb+BKT94xLY9yjw4PwjkrD3Iei4/8G24PVBIMz/ApVE8yvYxP6DXyzwvVys/oH7MPPeTOj+wT7U8Yns1P9BUED2ASTc/sGTZPNuSLz9Y8RI9exczP4gPmT3AzHs+2ZsrPuCnHD5qvSs+b0YGP5pEHD/Ifxw+/kwcP3U8Bj/YDTQ/4JN7PuRKHD+q6tw+8g80PzhYrT5YIJk9nHStPgi1Kz6m/tw+QKQrPljEez6yRhw/UJx7Ps1IHD9qXK0+p6wrPmpwrT5gMoM8QDwmPRBnuDww0ws9dkF6P4COCD3253s/cCkjPbY8ej9QE1g9F0N6P+AA3Dxf5ns/IKs9PUABgzwAvkA9sNK3PABlWz1Ql7g84KLiPCA2uDzwVCY92j96PxAQIz1GPno/sJE9PcAEuDzA1kA91EJePziuIj4riGM/nMM3PsJCXj8YgQI/JYhjP3B3+j4NuFM/anf6PmT9WD8YgQI/gc1oP3B3+j4euFM/kMM3Pn/9WD84riI+gc1oP6jDNz7UQl4/nMM3PsVCXj9wd/o+ZP1YP3B3+j59/Vg/mMM3Pli1yT5g9iI9crjJPuBpCD0+ssk+EIM9PR+vyT7QFVg9jrvJPmC62zz+JRs/8MNAPSYpGz/Qqgs9aCQbP0BQWz2+Khs/QDDiPJInGz9wNyY9wC/HPliwez6MK8c+4JMcPlM8xz51QQY/8zPHPmhmrT4jOMc+qPTcPlFuKz9kElU/UW4rP2QSVT9Rbis/ZBJVPwyRKz/n53c/DJErP+fndz8MkSs/5+d3PwyRKz/n53c/qC54P4VnbT+IM3g/1CpeP9tLez9hymQ/20t7P2HKZD9AjXU/Jx1qP0CNdT8nHWo/A+h4PwRPaD88x3c/gGZiPzzHdz+AZmI/PMd3P4BmYj9fY3U/LOtlP19jdT8s62U/X2N1PyzrZT9fY3U/LOtlP8ClUTyaIFA/QMZVPAkofT9CPHs/8EtKPz9Lez+DRB0/AK9VPOnqcT8Ar1U86epxP0A8ez/PDj8/QDx7P88OPz+A6VI8rY1bP4DpUjytjVs/k0Z7P5axKD+TRns/lrEoP5NGez+WsSg/yQSmPsMRRT/JBKY+wxFFP8kEpj7DEUU/yQSmPsMRRT+lR6Y+OjwiP6VHpj46PCI/pUemPjo8Ij+lR6Y+OjwiP8ClUTzK9jE/wKVRPMr2MT+g18s8L1crP6B+zDz3kzo/sE+1PGJ7NT/QVBA9gEk3P7Bk2Tzbki8/sGTZPNuSLz+wZNk825IvP1jxEj17FzM/WPESPXsXMz9Y8RI9exczP4gPmT3AzHs+iA+ZPcDMez7Zmys+4KccPmq9Kz5vRgY/mkQcP8h/HD6aRBw/yH8cPv5MHD91PAY/2A00P+CTez7kShw/qurcPuRKHD+q6tw+5EocP6rq3D7yDzQ/OFitPvIPND84WK0+WCCZPZx0rT4ItSs+pv7cPgi1Kz6m/tw+CLUrPqb+3D4ItSs+pv7cPkCkKz5YxHs+QKQrPljEez5ApCs+WMR7PkCkKz5YxHs+QKQrPljEez6yRhw/UJx7PrJGHD9QnHs+skYcP1Ccez6yRhw/UJx7PrJGHD9QnHs+zUgcP2pcrT7NSBw/alytPs1IHD9qXK0+zUgcP2pcrT6nrCs+anCtPqesKz5qcK0+p6wrPmpwrT6nrCs+anCtPqesKz5qcK0+YDKDPEA8Jj1gMoM8QDwmPfbnez9wKSM9X+Z7PyCrPT1f5ns/IKs9PUABgzwAvkA9IDa4PPBUJj3aP3o/EBAjPdo/ej8QECM9Rj56P7CRPT3ABLg8wNZAPcAEuDzA1kA91EJePziuIj7UQl4/OK4iPiuIYz+cwzc+K4hjP5zDNz4riGM/nMM3PsJCXj8YgQI/JYhjP3B3+j4liGM/cHf6PiWIYz9wd/o+DbhTP2p3+j5k/Vg/GIECP2T9WD8YgQI/gc1oP3B3+j6BzWg/cHf6Ph64Uz+Qwzc+HrhTP5DDNz5//Vg/OK4iPoHNaD+owzc+1EJeP5zDNz7UQl4/nMM3PtRCXj+cwzc+1EJeP5zDNz7FQl4/cHf6PsVCXj9wd/o+xUJeP3B3+j7FQl4/cHf6PsVCXj9wd/o+ZP1YP3B3+j5k/Vg/cHf6PmT9WD9wd/o+ZP1YP3B3+j59/Vg/mMM3Pn39WD+Ywzc+ff1YP5jDNz59/Vg/mMM3Pn39WD+Ywzc+jCvHPuCTHD6MK8c+4JMcPlM8xz51QQY/UzzHPnVBBj9TPMc+dUEGPw=="),
"bone_aabbs": [AABB(-0.211496, -0.211496, -7.02151, 1.89218, 0.422993, 14.043), AABB(-0.211496, -0.211496, -7.02151, 1.89218, 0.422993, 14.043)],
"format": 34359745559,
"index_count": 480,
"index_data": PackedByteArray("KQAgAAMAAgAHAAAABAAnAC0AIQACAAAALQADAAQABwAMAAUAAQAIAAMAAwAJAAQABAAHAAIADAARAAsABgANAAgACAAOAAkACQAMAAcAEQAWABAAEgATAA0ADgARAAwACgASAA0AFgAcABUAEwAYABEADwAXABIAEgAYABMAHgAbAB8AFAAaABcAFwAfABgAGAAcABYAKgAkACMAJgAlADEALAAoACYAIgAmACgALgArACoAMQAwADYAJAAyAC8AKwAzADIALAAxADMANgA0ADsALwA3ADUAMgA4ADcAMwAxADgAOwA5AEAAOAA9ADcAOAA7AD0ANQA3ADoAQAA+AEcAPQBAAEIAOgA8AD8APABCAEEASABJAEMAPwBBAEQAQQBJAEgAQgBAAEkAfgBNAFUAVQBRAFYAgQBTAFcAVwBKAFQAgABQAE4AgQBVAFYAfQBaAGMAYwBeAGQAdgBgAGUAZQBYAGIAegBdAFoAeQBjAGQAcABpAHEAcQBrAHIAcgBtAHMAcwBmAHAAZwBsAGkAcwBxAHIAYgB1AHQAeQB3AHYAWQB4AHUAZQB0AHYAdAB6AH0AdgB9AHkATACCAIAAVAB/AH4AdQB8AHoAZAB7AHkAVwB+AIEAVgCCAIEAOgA3ADwAAAAHAAUAAgAnAAQAJwACACEAKQADAC0ABQAMAAsABgAIAAEACAAJAAMACQAHAAQADQATAA4ACgANAAYADQAOAAgADgAMAAkAEAAWABUAOAAxADYAEwARAA4ADwASAAoAFQAcABkARABBAEgAFAAXAA8AFwAYABIAAwAgAAEAHgAfABcAHwAcABgAKwAkACoAMQAlADAALgAoACwAJQAmACIALAArAC4ANgAwADQAKwAyACQALAAzACsAJgAxACwACwARABAAMgA3AC8AMwA4ADIASQBAAEcAQAA5AD4AOwA0ADkANgA7ADgAFwAaAB4ARwA+AEUAOwBAAD0APwA8AEEAPQBCADwAHwAbAB0AQwBJAEYAQgBJAEEAEQAYABYAfwBNAH4ATwBRAFUAggBTAIEAUgBKAFcAggBQAIAAfgBVAIEAegBaAH0AWwBeAGMAdwBgAHYAXwBYAGUAfABdAHoAfQBjAHkAZwBpAHAAaABrAHEAagBtAHIAbgBmAHMAbwBsAGcAcABxAHMAWQB1AGIAewB3AHkAYQB4AFkAYgB0AGUAdQB6AHQAdAB9AHYAUwCCAEwASwB/AFQAeAB8AHUAXAB7AGQAVAB+AFcAUACCAFYANwA9ADwA"),
"lods": [0.427002, PackedByteArray("oACYAIMAhgCcAKEAKQAKAAsACgAfAAsAkQCUAIQAkgCMAJUAhQCLAJMAogCpAJsAowBJAKoAKgBHAEkApwBHACoAswC2AK0AqwC0AK8AywC9ANAA0QDEANUA2QC5AMwAEAHBAL8A2gDSANYAYgBaAGMAWQBaAGIAYgBjAGUAWQBdAFoAeABdAFkAYQB4AFkAZQBjAGQAZAB3AGUAdwBgAGUAXAB3AGQA5QDhAOcA6ADeAOQA/ADwAAABAQH0AAUBBgH4AAkBCgHqAP0A7AD2APEACwECAQcBvADHABEB1wDIANsAnQCHAJkAlgCOAIgAiQCPAIoApQCeAJoAnwCmAKQAsgCoALAAlwCNAJAArgC3ALEADgG+AM0AwADFANMAxgC6ANwAyQDCABIBzgDUAN0A4ADiAOYA4wDfAOkA7QDyAP4A7wD1AAMB8wD5AAgB+gDrAAwB+wD3AO4A/wAEAQ0BuwAPAc8AwwDKANgArAC4ALUA")],
"material": SubResource("StandardMaterial3D_6vl11"),
"name": "Material",
"primitive": 3,
"skin_data": PackedByteArray("AAABAAAAAAAe9uAJAAAAAAAAAQAAAAAAHvbgCQAAAAAAAAEAAAAAACb22AkAAAAAAAABAAAAAAAe9uAJAAAAAAAAAQAAAAAAJvbYCQAAAAAAAAEAAAAAAJfsZxMAAAAAAAABAAAAAACX7GcTAAAAAAAAAQAAAAAACO32EgAAAAAAAAEAAAAAAJfsZxMAAAAAAAABAAAAAAAI7fYSAAAAAAAAAQAAAAAAkeRtGwAAAAAAAAEAAAAAAJHkbRsAAAAAAAABAAAAAACR5G0bAAAAAAAAAQAAAAAAkeRtGwAAAAAAAAEAAAAAAJHkbRsAAAAAAAABAAAAAADr3RMiAAAAAAAAAQAAAAAA690TIgAAAAAAAAEAAAAAALrcRCMAAAAAAAABAAAAAADr3RMiAAAAAAAAAQAAAAAAutxEIwAAAAAAAAEAAAAAAHvVgyoAAAAAAAABAAAAAAB71YMqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAHvVgyoAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAUNWuKgAAAAAAAAEAAAAAAFDVrioAAAAAAAABAAAAAABQ1a4qAAAAAAAAAQAAAAAAU9WsKgAAAAAAAAEAAAAAAFPVrCoAAAAAAAABAAAAAABQ1a4qAAAAAAAAAQAAAAAAU9WsKgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAAm9tgJAAAAAAAAAQAAAAAAJvbYCQAAAAAAAAEAAAAAACb22AkAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAJvbYCQAAAAAAAAEAAAAAACb22AkAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAADt/hIAAAAAAAABAAAAAAAA7f4SAAAAAAAAAQAAAAAACO32EgAAAAAAAAEAAAAAAADt/hIAAAAAAAABAAAAAAAI7fYSAAAAAAAAAQAAAAAAh+R3GwAAAAAAAAEAAAAAAIfkdxsAAAAAAAABAAAAAACR5G0bAAAAAAAAAQAAAAAAh+R3GwAAAAAAAAEAAAAAAJHkbRsAAAAAAAABAAAAAACv3E8jAAAAAAAAAQAAAAAAr9xPIwAAAAAAAAEAAAAAAK/cTyMAAAAAAAABAAAAAACv3E8jAAAAAAAAAQAAAAAAr9xPIwAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABM1bIqAAAAAAAAAQAAAAAATNWyKgAAAAAAAAEAAAAAADXVySoAAAAAAAABAAAAAAA11ckqAAAAAAAAAQAAAAAANdXJKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABM1bIqAAAAAAAAAQAAAAAANdXJKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAAAAgP5/AAAAAAAAAQAAAAAAAID+fwAAAAAAAAEAAAAAAAiA9n8AAAAAAAABAAAAAAAIgPZ/AAAAAAAAAQAAAAAAB4D3fwAAAAAAAAEAAAAAAAeA938AAAAAAAABAAAAAAAHgPd/AAAAAAAAAQAAAAAA/3//fwAAAAAAAAEAAAAAAP9//38AAAAAAAABAAAAAAD/f/9/AAAAAAAAAQAAAAAAAID+fwAAAAAAAAEAAAAAAAiA9n8AAAAAAAABAAAAAAAHgPd/AAAAAAAAAQAAAAAA/3//fwAAAAAAAAEAAAAAAASA+n8AAAAAAAABAAAAAAAEgPp/AAAAAAAAAQAAAAAAAoD8fwAAAAAAAAEAAAAAAAKA/H8AAAAAAAABAAAAAAACgPx/AAAAAAAAAQAAAAAAaIGWfgAAAAAAAAEAAAAAAGyBkn4AAAAAAAABAAAAAABogZZ+AAAAAAAAAQAAAAAAaIGWfgAAAAAAAAEAAAAAAGyBkn4AAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAJHkbRsAAAAAAAABAAAAAACR5G0bAAAAAAAAAQAAAAAAkeRtGwAAAAAAAAEAAAAAAJHkbRsAAAAAAAABAAAAAACR5G0bAAAAAAAAAQAAAAAAkeRtGwAAAAAAAAEAAAAAAJHkbRsAAAAAAAABAAAAAABQ1a4qAAAAAAAAAQAAAAAAUNWuKgAAAAAAAAEAAAAAAFDVrioAAAAAAAABAAAAAABQ1a4qAAAAAAAAAQAAAAAAU9WsKgAAAAAAAAEAAAAAAFPVrCoAAAAAAAABAAAAAABT1awqAAAAAAAAAQAAAAAAUNWuKgAAAAAAAAEAAAAAAFDVrioAAAAAAAABAAAAAABQ1a4qAAAAAAAAAQAAAAAAU9WsKgAAAAAAAAEAAAAAAFPVrCoAAAAAAAABAAAAAABT1awqAAAAAAAAAQAAAAAAU9WsKgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAACH5HcbAAAAAAAAAQAAAAAAh+R3GwAAAAAAAAEAAAAAAIfkdxsAAAAAAAABAAAAAACH5HcbAAAAAAAAAQAAAAAAh+R3GwAAAAAAAAEAAAAAAIfkdxsAAAAAAAABAAAAAACH5HcbAAAAAAAAAQAAAAAAh+R3GwAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAAD6+gUFAAAAAAAAAQAAAAAA+voFBQAAAAAAAAEAAAAAAPr6BQUAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAEzVsioAAAAAAAABAAAAAAA11ckqAAAAAAAAAQAAAAAANdXJKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAABU1aoqAAAAAAAAAQAAAAAATNWyKgAAAAAAAAEAAAAAAEzVsioAAAAAAAABAAAAAAA11ckqAAAAAAAAAQAAAAAAVNWqKgAAAAAAAAEAAAAAAFTVqioAAAAAAAABAAAAAAAAgP5/AAAAAAAAAQAAAAAAAID+fwAAAAAAAAEAAAAAAACA/n8AAAAAAAABAAAAAAAAgP5/AAAAAAAAAQAAAAAAAID+fwAAAAAAAAEAAAAAAAiA9n8AAAAAAAABAAAAAAAIgPZ/AAAAAAAAAQAAAAAACID2fwAAAAAAAAEAAAAAAAiA9n8AAAAAAAABAAAAAAAHgPd/AAAAAAAAAQAAAAAAB4D3fwAAAAAAAAEAAAAAAAeA938AAAAAAAABAAAAAAAHgPd/AAAAAAAAAQAAAAAAB4D3fwAAAAAAAAEAAAAAAP9//38AAAAAAAABAAAAAAD/f/9/AAAAAAAAAQAAAAAA/3//fwAAAAAAAAEAAAAAAP9//38AAAAAAAABAAAAAAAAgP5/AAAAAAAAAQAAAAAAAID+fwAAAAAAAAEAAAAAAACA/n8AAAAAAAABAAAAAAAAgP5/AAAAAAAAAQAAAAAACID2fwAAAAAAAAEAAAAAAAiA9n8AAAAAAAABAAAAAAAIgPZ/AAAAAAAAAQAAAAAACID2fwAAAAAAAAEAAAAAAAiA9n8AAAAAAAABAAAAAAAHgPd/AAAAAAAAAQAAAAAAB4D3fwAAAAAAAAEAAAAAAAeA938AAAAAAAABAAAAAAAHgPd/AAAAAAAAAQAAAAAA/3//fwAAAAAAAAEAAAAAAP9//38AAAAAAAABAAAAAAD/f/9/AAAAAAAAAQAAAAAA/3//fwAAAAAAAAEAAAAAAP9//38AAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAAAAAEAAAAAAHb9iAIAAAAAAAABAAAAAAB2/YgCAAAAAAAAAQAAAAAAdv2IAgAAAAA="),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 275,
"vertex_data": PackedByteArray("nLY0vrC2ND7q2A5AnLY0vrC2ND7q2A5ApLY0PrC2ND7q2A5AnLY0vpC2NL7q2A5ApLY0PpC2NL7q2A5ACEDGvACzFz5K23ZACEDGvACzFz5K23ZASx6IPgCzFz4S/XJACEDGvMCyF75K23ZASx6IPsCyF74S/XJAR5C1PoDMAj5Zy6NAR5C1PoDMAj5Zy6NA5v0WP4DMAj5dmqBAR5C1PoDMAr5Zy6NA5v0WP4DMAr5dmqBA489vP4Dcwz0BlsVA489vP4Dcwz0BlsVAGXuMPwDcwz3JRMJA489vPwDcw70BlsVAGXuMPwDcw73JRMJAlnWsP4Balz0HBNZAlnWsP4Balz0HBNZA1em3P4Balz1XQNJAlnWsPwBal70HBNZA1em3PwBal71XQNJAwODRP4BVgT0/sOBAwODRP4BVgT0/sOBAwODRP4BVgT0/sOBAjiDXP4BVgT2l3dxAjiDXP4BVgT2l3dxAwODRPwBVgb0/sOBAjiDXPwBVgb2l3dxAoLY0vmC2ND4gjto0oLY0vmC2ND4gjto0oLY0vmC2ND4gjto0oLY0vmC2ND4gjto0pLY0vmC2ND7k2A7ApLY0vmC2ND7k2A7AnLY0PmC2ND7k2A7AoLY0PmC2ND7gcdU0oLY0PmC2ND7gcdU0oLY0vpy2NL4gjuo0oLY0vpy2NL4gjuo0pLY0vuC2NL7k2A7AnLY0PuC2NL7k2A7AoLY0Ppy2NL7gceU0oLY0Ppy2NL7gceU0eEDGvKCyFz5E23bAeEDGvKCyFz5E23bARR6IPpCyFz4M/XLAeEDGvDCzF75E23bARR6IPjCzF74M/XLAPZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PA4v0WP0DMAj5amqDAPZC1PsDMAr5Vy6PA4v0WP8DMAr5ZmqDA3c9vP4Dbwz3/lcXA3c9vP4Dbwz3/lcXAF3uMP4Dbwz3HRMLA3c9vP4Dcw70BlsXAF3uMP4Dcw73JRMLAknWsP4BZlz0FBNbAknWsP4BZlz0FBNbA0+m3P4BZlz1VQNLAknWsPwBbl70FBNbA0+m3PwBbl71VQNLAvODRP4BUgT09sODAvODRP4BUgT09sODAvODRP4BUgT09sODAiiDXP4BUgT2j3dzAiiDXP4BUgT2j3dzAvODRPwBWgb09sODAiiDXPwBWgb2j3dzAfpJYvoiSWL69EYE/fpJYvoiSWL69EYE/fpJYvoiSWL69EYE/gpJYvoiSWL69EYG/gpJYvoiSWL69EYG/gpJYvoiSWL69EYG/hpJYPoiSWL69EYG/hpJYPoiSWL69EYG/ipJYPoiSWL69EYE/ipJYPoiSWL69EYE/fpJYvoiSWD69EYE/gpJYvoiSWD69EYG/hpJYPoiSWD69EYG/ipJYPoiSWD69EYE/9qfLP2CAlby3FN1A9qfLP2CAlby3FN1A8qfLP2CAlby3FN3A8qfLP2CAlby3FN3A9lPQP2CAlby3FN3A9lPQP2CAlby3FN3A9lPQP2CAlby3FN3A+lPQP2CAlby3FN1A+lPQP2CAlby3FN1A+lPQP2CAlby3FN1A9qfLP0CAlTy3FN1A8qfLP0CAlTy3FN3A9lPQP0CAlTy3FN3A+lPQP0CAlTy3FN1ASLHIP5rWJ70HzR0/SLHIP5rWJ70HzR0/SLHIP5rWJ70JzR2/SLHIP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70HzR0/sC7TP5rWJ70HzR0/sC7TP5rWJ70HzR0/SLHIP5rWJz0HzR0/SLHIP5rWJz0JzR2/sC7TP5rWJz0JzR2/sC7TP5rWJz0HzR0/9KfLP0CAlTz90xg/9KfLP2CAlbz90xg/+FPQP0CAlTz90xg/+FPQP2CAlbz90xg/+FPQP2CAlbz90xg/+FPQP0CAlTzddBi/9KfLP2CAlbzddBi/+FPQP2CAlbzddBi/+FPQP2CAlbzddBi/9KfLP0CAlTzddBi/gJJYvoiSWD4o+8MxgJJYvoiSWL4q+8MxgJJYvoiSWL4q+8MxiJJYPoiSWD4y+8OxiJJYPoiSWL4w+8OxR5C1PoDMAj5Zy6NAR5C1PoDMAj5Zy6NAR5C1PoDMAj5Zy6NAR5C1PoDMAj5Zy6NAR5C1PoDMAj5Zy6NAR5C1PoDMAj5Zy6NAR5C1PoDMAj5Zy6NAwODRP4BVgT0/sOBAwODRP4BVgT0/sOBAwODRP4BVgT0/sOBAwODRP4BVgT0/sOBAjiDXP4BVgT2l3dxAjiDXP4BVgT2l3dxAjiDXP4BVgT2l3dxAwODRPwBVgb0/sOBAwODRPwBVgb0/sOBAwODRPwBVgb0/sOBAjiDXPwBVgb2l3dxAjiDXPwBVgb2l3dxAjiDXPwBVgb2l3dxAjiDXPwBVgb2l3dxAoLY0vmC2ND4gjto0oLY0vmC2ND4gjto0oLY0vmC2ND4gjto0oLY0vmC2ND4gjto0oLY0PmC2ND7gcdU0oLY0PmC2ND7gcdU0oLY0PmC2ND7gcdU0oLY0PmC2ND7gcdU0oLY0vpy2NL4gjuo0oLY0vpy2NL4gjuo0oLY0vpy2NL4gjuo0oLY0vpy2NL4gjuo0oLY0vpy2NL4gjuo0PZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PAPZC1PgDMAj5Wy6PAvODRP4BUgT09sODAvODRP4BUgT09sODAvODRP4BUgT09sODAvODRP4BUgT09sODAiiDXP4BUgT2j3dzAiiDXP4BUgT2j3dzAvODRPwBWgb09sODAvODRPwBWgb09sODAvODRPwBWgb09sODAiiDXPwBWgb2j3dzAiiDXPwBWgb2j3dzAiiDXPwBWgb2j3dzAfpJYvoiSWL69EYE/fpJYvoiSWL69EYE/fpJYvoiSWL69EYE/fpJYvoiSWL69EYE/gpJYvoiSWL69EYG/gpJYvoiSWL69EYG/gpJYvoiSWL69EYG/gpJYvoiSWL69EYG/hpJYPoiSWL69EYG/hpJYPoiSWL69EYG/hpJYPoiSWL69EYG/hpJYPoiSWL69EYG/hpJYPoiSWL69EYG/ipJYPoiSWL69EYE/ipJYPoiSWL69EYE/ipJYPoiSWL69EYE/ipJYPoiSWL69EYE/ipJYPoiSWL69EYE/fpJYvoiSWD69EYE/fpJYvoiSWD69EYE/fpJYvoiSWD69EYE/fpJYvoiSWD69EYE/fpJYvoiSWD69EYE/gpJYvoiSWD69EYG/gpJYvoiSWD69EYG/gpJYvoiSWD69EYG/gpJYvoiSWD69EYG/gpJYvoiSWD69EYG/hpJYPoiSWD69EYG/hpJYPoiSWD69EYG/hpJYPoiSWD69EYG/hpJYPoiSWD69EYG/ipJYPoiSWD69EYE/ipJYPoiSWD69EYE/ipJYPoiSWD69EYE/ipJYPoiSWD69EYE/ipJYPoiSWD69EYE/9qfLP2CAlby3FN1A9qfLP2CAlby3FN1A8qfLP2CAlby3FN3A9lPQP2CAlby3FN3A9lPQP2CAlby3FN3A+lPQP2CAlby3FN1A9qfLP0CAlTy3FN1A8qfLP0CAlTy3FN3A8qfLP0CAlTy3FN3A9lPQP0CAlTy3FN3A+lPQP0CAlTy3FN1A+lPQP0CAlTy3FN1ASLHIP5rWJ70HzR0/SLHIP5rWJ70HzR0/SLHIP5rWJ70HzR0/SLHIP5rWJ70HzR0/SLHIP5rWJ70HzR0/SLHIP5rWJ70JzR2/SLHIP5rWJ70JzR2/SLHIP5rWJ70JzR2/SLHIP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70JzR2/sC7TP5rWJ70HzR0/sC7TP5rWJ70HzR0/sC7TP5rWJ70HzR0/sC7TP5rWJ70HzR0/SLHIP5rWJz0HzR0/SLHIP5rWJz0HzR0/SLHIP5rWJz0HzR0/SLHIP5rWJz0HzR0/SLHIP5rWJz0JzR2/SLHIP5rWJz0JzR2/SLHIP5rWJz0JzR2/SLHIP5rWJz0JzR2/SLHIP5rWJz0JzR2/sC7TP5rWJz0JzR2/sC7TP5rWJz0JzR2/sC7TP5rWJz0JzR2/sC7TP5rWJz0JzR2/sC7TP5rWJz0HzR0/sC7TP5rWJz0HzR0/sC7TP5rWJz0HzR0/sC7TP5rWJz0HzR0/sC7TP5rWJz0HzR0/gJJYvoiSWL4q+8MxgJJYvoiSWL4q+8MxgJJYvoiSWL4q+8MxgJJYvoiSWL4q+8MxgJJYvoiSWL4q+8MxCEGRvceDhb4IQZG9TIdbwNC/XcG3gtK/CEFtQsWE98DQv6E+bYOIwBFFq7ihkZ29EUWruPSWksDFwUvG54/gvxFFU0dOk4PBxcGzOVOR+sA1TEq1B6jwwDVMSrUXofi8icU1zJKgCsA1TLRKbaPgwYnFyTMKoirBelPjs9+1ZsF6U+OzaquSuw7I9dDwqzjAelMbTBOvwMIOyAkvva2CwR5YvrTgvIvBHli+tM6xk7tdyj/TIrJfwB5YQEvLtbfCXcq/LAW0nMGwjcutKrFtpbCNy63ZxWOqsI3LrXA1uueWzCy94ppJtpbMLL1WX3LZsI0zUjKiJ96WzNJCDKB1zv8//7/pf/S//z//vwCA/7//P/+//H/9v/8//7/9f/6/kj0Iwbl4p7+SPQjBNXx4waG+LsBEfS3A/7//v/V/BMD/v/+/B4D7v/8//z8XgPO//z//P/R/BMCSPfY+NnsIv6G+0D+TfHe//7//PxeAC8D/v/8/6X/0v6w4EMUIaWu/rDgQxVtuYMKyuTm+FHAfwKw47jqybHq+srnFQa5uBb9KNTTM5V4Ew0o1NMz2Vw2/ybN1umxf9L9KNcozklwdvsmziUX1XdO+5DN605JUa8TkM3rTHkqVvgmv77cWVMK/5DOELO9QPL0Jrw9IPlJ4vr80HdguTmrEvzQd2B5Ddb6+rKG1xE2pv7804ScySke9vqxdSgBMbL4z0k3yj8pEmDPSTfIjOprVM9JN8tJOkNrRwmezqKCMptHCZ7MkZa7JM9KxDc1d1qHRwpdM71+FsVRVVFUDYP/fVFVUVfsfAZBUVVRV+x8BkKoqqir63wHwqiqqKvrfAfCqKqoqA6D/n1TVqir7H/zvVNWqKgNg/5+qqlRVA6D/36qqVFX63/2PVFWqqjczmvmqKlTV0MxohlTVVNU3M2OGqqqqqtDMlvlUVVZV01//31RVVlX2HwSQqSqrKvffA/CpKqsq0Z//n1PVqSr3H/vvU9WpKvcf++9T1akq0F8AoKiqVFXSn/7fqKpUVfXf+o+oqlRV9N/6j1ZVqqosM5X5qypV1cPMYYZV1VPVKjNphqqqqKrFzJv5VFVWVf8f/99UVVZV/b//n6sqqSr+P/7PqyqpKv6/AKBV1asq/b//71XVqyr/H/+fVdWrKv6//8+oqlRV/p/+36iqVFX+P/+vqKpUVf/f/t9WVaqqMjMAoKkqU9UAQGWmU9VV1TIz/t+qqqiqAECY2f8//78YAAuA/z//P+b/C4D/v/+/GADy//+//z/m//L//7//P+b/8v//v/+/GADy//8//z/l/wyA/7//P+b/8v//v/8/5f/y//8//78ZAAyA/z//v/n//P//P/8/BQD8//8//z8FAPz//7//v/n/AoD/v/8/BQACgNEcmZEHqPDAn5jAFweo8MATTg2oB6jwwEj4RI8Xofi8163s0xeh+Lzh4d2/F6H4vPeIXfgXofi8+ZTC5iqxbaVBVVWk2cVjqmy6KmpwNbrnbMHimXA1uucE3ue+4ppJtmWqXeDimkm2Js+EolZfctlvlsQkMqIn3ky1R1syoifek0+hlzKiJ95poSc3DKB1zse73VsMoHXOVfjtrgygdc7q515/DKB1zs0h4pvpf/S/Z4Ol/QCA/7+Bnvnf/H/9v0MWjZn9f/6/MvjmifV/BMB/qxTV9X8EwNytvdAHgPu/CuHPYweA+7/1IGFnF4Dzv6PRbFAXgPO/TRt3YfR/BMAAlVwW9H8EwEXCwkP0fwTABa7MzuVeBMML5HKV5V4Ew8Sw6cblXgTDA5tx2eVeBMNHEVma9lcNv0ylXSn2Vw2/Di2tzfZXDb8mlYEZ9lcNv1HqaTWPykSYN+lgt4/KRJgALv7RIzqa1eedTOTSTpDanttttKigjKaLozzQJGWuyZvfYS7NXdahIBXuyc1d1qExnKULzV3WoXrhhzbvX4Wx8ff0pO9fhbHFoGwq71+FsYhau4YDYP/fyISxVgNg/9/TMZ1X+x8BkH1V1jT7HwGQ1BgxnPrfAfCiKfZN+t8B8BtbtiH63wHw1yA9IgOg/5/Sa/YR+x/870mcfh77H/zvq9BWR/sf/O98+1XcA2D/n3cl8A4DYP+fa5jTYQOg/9/5d5IL+t/9j+TwOY/63/2PI6ibMPrf/Y/hzhVM+t/9jxwvDLI3M5r5zW0oqzczmvnICqyKNzOa+d1TIMo3M5r5zQjYhTczmvl4MAW50MxohuAnbP3QzGiGwJqy49DMaIbpB5Yq0MxohmhTC8/QzGiGGuZY6TczY4ZcrhjQNzNjhjvXXKc3M2OGH/LgcDczY4aHfPKw0MyW+Wuu/cbQzJb5uNDlrNDMlvkCpXl30MyW+aZ69fjQzJb5IGGbjNNf/9/9iSJZ01//330kShrRn/+fSPmZ3NBfAKD3JXMM0F8AoCmePGLSn/7fq2synywzlfmn1vz7w8xhhgQM+tXDzGGGGd3f5yozaYa5f42qxcyb+eWskYjFzJv5WljOhv8f/99ChzxU/x//3/9g3yT9v/+fuTYjWf2//5+ZoG4i/b//n/Ql5Bv+P/7P0wLId/6/AKBeVw0n/r8AoLsqw03+vwCg3d+vT/2//+/g+kbg/x//n2ksRgP/H/+fiJXND/6//8/yrCMt/r//zyvmBIf+n/7fGc7aVP6f/t/lmEtb/j//rxCmain/3/7fuSy2qTIzAKCaZFunMjMAoGQSTYIyMwCgQ1UkwTIzAKB1Kzu7AEBlpqEn5vsAQGWmvIfF+gBAZaaUFokaAEBlpgJNydMAQGWmSt8x6zIz/t/v1DS0MjP+3/m2sdgyM/7f1f+yZzIz/t8I1VykAECY2TttDKYAQJjZSqfl3QBAmNk9oZ1vAECY2Z5os+UAQJjZBShUVQUA/P8BKRhaBQD8/1NajiEFAPz/pVBUNwUA/P/AdSALBQD8/w==")
}]
blend_shape_mode = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0urnp"]
shading_mode = 0
albedo_color = Color(0.831373, 0.831373, 0, 1)
disable_receive_shadows = true
grow = true
grow_amount = 0.002

[sub_resource type="SphereShape3D" id="SphereShape3D_gy7p7"]

[sub_resource type="Resource" id="Resource_gjjlt"]
script = ExtResource("5_pfwtn")
closed_pose = ExtResource("4_bdr5j")

[node name="Bow" instance=ExtResource("1_vl8v5")]
script = ExtResource("2_cgjgp")

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, -0.0546894, 0, 0)
visible = false
shape = SubResource("ConvexPolygonShape3D_cxhhj")

[node name="Bow" parent="." index="1" instance=ExtResource("2_4f3jw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0546894, 0, 0)

[node name="Skeleton3D" parent="Bow/Armature" index="0"]
bones/0/rotation = Quaternion(1, -7.54979e-08, 4.38604e-08, -3.77489e-08)
bones/1/rotation = Quaternion(1, -1.50996e-07, 7.54979e-08, 7.54979e-08)

[node name="Cube" parent="Bow/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, 0, 0, 0)
surface_material_override/0 = SubResource("StandardMaterial3D_nwlmf")

[node name="GrabPointHandLeft" parent="." index="2" instance=ExtResource("3_ohdt4")]
transform = Transform3D(-0.00541045, -0.00684155, 0.999962, -0.999985, 3.70164e-05, -0.00541032, 0, -0.999977, -0.00684165, -0.13834, -0.00585752, 0.0119577)
hand_pose = SubResource("Resource_s3v65")

[node name="GrabPointHandRight" parent="." index="3" instance=ExtResource("6_v4ojs")]
transform = Transform3D(-0.0131943, 0, 0.999913, -0.999913, 0.0008551, -0.0131943, -0.000855026, -1, -1.12825e-05, -0.15685, 0.0202121, 0.0100229)

[node name="XRToolsHighlightVisible" type="Node3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0546894, 0, 0)
visible = false
script = ExtResource("7_m761g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XRToolsHighlightVisible" index="0"]
transform = Transform3D(0.088, 0, 0, 0, 0.088, 0, 0, 0, 0.088, 0, 0, 0)
mesh = SubResource("ArrayMesh_3h55a")
surface_material_override/0 = SubResource("StandardMaterial3D_0urnp")

[node name="PullPivot" type="Node3D" parent="." index="5"]
transform = Transform3D(1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0.0913049, 0, 0)

[node name="HandleOrigin" type="Node3D" parent="PullPivot" index="0"]
transform = Transform3D(0.06, 0, 0, 0, 0.06, 0, 0, 0, 0.06, 0, 0, 0)

[node name="PullPick" parent="PullPivot/HandleOrigin" index="0" instance=ExtResource("9_q5fw6")]
freeze = true
picked_up_layer = 65536

[node name="CollisionShape3D" type="CollisionShape3D" parent="PullPivot/HandleOrigin/PullPick" index="0"]
shape = SubResource("SphereShape3D_gy7p7")

[node name="GrabPointHandLeft" parent="PullPivot/HandleOrigin/PullPick" index="1" instance=ExtResource("3_ohdt4")]
transform = Transform3D(-0.00652754, -4.32774e-08, 0.999979, -0.999579, -0.028288, -0.00652493, 0.0282874, -0.9996, 0.000184608, -0.0836269, 0, -0.0126122)
visible = true
hand_pose = SubResource("Resource_gjjlt")

[node name="GrabPointHandRight" parent="PullPivot/HandleOrigin/PullPick" index="2" instance=ExtResource("6_v4ojs")]
transform = Transform3D(-0.00652754, 0, 0.999979, -0.999579, -0.028288, -0.00652493, 0.0282874, -0.9996, 0.000184651, -0.0836269, 0, -0.0126122)
visible = true

[node name="ArrowSnapZone" parent="PullPivot" index="1" instance=ExtResource("9_phia5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.423677, 0, 0)
collision_layer = 2
collision_mask = 65538
enabled = false
snap_require = "Arrow"

[node name="Timer" type="Timer" parent="PullPivot/ArrowSnapZone" index="2"]
one_shot = true

[connection signal="dropped" from="." to="." method="_on_bow_dropped"]
[connection signal="picked_up" from="." to="." method="_on_bow_picked_up"]
[connection signal="dropped" from="PullPivot/HandleOrigin/PullPick" to="." method="_on_pull_pick_dropped"]
[connection signal="picked_up" from="PullPivot/HandleOrigin/PullPick" to="." method="_on_pull_pick_picked_up"]
[connection signal="has_picked_up" from="PullPivot/ArrowSnapZone" to="." method="_on_arrow_snap_zone_has_picked_up"]
[connection signal="timeout" from="PullPivot/ArrowSnapZone/Timer" to="." method="_on_arrow_snap_zone_timer_timeout"]

[editable path="Bow"]
